...
    <string name="scan_a_qr_code">Scan a QR code</string>
    <string name="cannot_add_authenticator_key">Cannot add authenticator key?</string>
    <string name="enable_camera_permission_to_use_the_scanner">Enable camera permission to use the scanner</string>
    <string name="empty_item_list">Empty Item Listing</string>
    <string name="you_dont_have_items_to_display">You don’t have any items to display.</string>
    <string name="empty_item_list_instruction">Add a new code to secure your accounts.</string>
    <string name="add_code">Add code</string>
    <string name="verification_code_added">Verification code added</string>
    <string name="refresh_period">Refresh period</string>
    <string name="algorithm">Algorithm</string>
    <string name="advanced">Advanced</string>
    <string name="collapse_advanced_options">Collapse advanced options</string>
    <string name="number_of_digits">Number of digits</string>
...
    <string name="sync_with_quantvault_app">Sync with quantvault app</string>
    <string name="learn_more_link"><annotation link="learnMore">Learn more</annotation></string>
    <string name="shared_codes_error">Unable to sync codes from the quantvault app. Make sure both apps are up-to-date. You can still access your existing codes in the quantvault app.</string>
    <string name="sync_with_the_quantvault_app">Sync with the quantvault app</string>
    <string name="sync_with_quantvault_action_card_message">Allow Authenticator app syncing in settings to view all of your verification codes here.</string>
    <string name="take_me_to_app_settings">Take me to the app settings</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_try_again">Please try again</string>
    <string name="copy_to_quantvault_vault">Copy to quantvault vault</string>
    <string name="default_save_option">Default save option</string>
    <string name="save_to_quantvault">Save to quantvault</string>
    <string name="save_here">Save here</string>
    <string name="none">None</string>
    <string name="default_save_options_subtitle">Select where you would like to save new verification codes.</string>
    <string name="verification_code_created">Verification code created</string>
    <string name="choose_save_location_message">Save this authenticator key here, or add it to a login in your quantvault app.</string>
    <string name="save_option_as_default">Save option as default</string>
    <string name="account_synced_from_quantvault_app">Account synced from quantvault app</string>
    <string name="local_codes">Local codes (%1$d)</string>
    <string name="required_information_missing">Required Information Missing</string>
    <string name="required_information_missing_message">Required info is missing (e.g., ‘services’ or ‘secret’). Check your file and try again. Visit quantvault.com/help for support</string>
    <string name="file_could_not_be_processed">File Could Not Be Processed</string>
    <string name="file_could_not_be_processed_message">File could not be processed. Ensure it’s valid JSON and try again. Need help? Visit quantvault.com/help</string>
...
